--- a/AspNetCoreCS/Views/Shared/_Layout.cshtml
+++ b/AspNetCoreCS/Views/Shared/_Layout.cshtml
@@ -43,6 +43,11 @@
                     </ul>
                     <div class="container">
                         <div class="row">
+                            <div class="col-md-12 text-center readLogo">
+                                <img src="~/images/login-logo.png" />
+                            </div>
+
+
                             <div id="Progresstext" style="display:none">
                                 Configuration....
                             </div>
@@ -68,7 +73,7 @@
                             @*<a class="dropdown-toggle nav-link dropdown-user-link" href="#" data-toggle="dropdown">
                                     <span class="avatar avatar-online"><img src="~/images/user.jpg" alt="avatar"></span>
                                 </a>*@
-                            <a class="btn btn-light round" asp-controller="Account" asp-action="logoff" style="width: 80px;"><img src="~/images/readedge-icon.png" style="width:18px;float: left;margin-right: 16px;"/> <i class="ft-power"></i></a>
+                            <a class="btn btn-light round" asp-controller="Account" asp-action="logoff"><i class="ft-power" style="margin:0;font-size: 20px;"></i></a>
                             @*<div class="dropdown-menu dropdown-menu-right">
                                                 <div class="arrow_box_right">
                                                     <a class="dropdown-item" asp-controller="home" asp-action="Configuration"><i class="ft-settings"></i> Configuration</a>
