--- a/AspNetCoreCS/Views/Home/Home.cshtml
+++ b/AspNetCoreCS/Views/Home/Home.cshtml
@@ -24,6 +24,7 @@
     <link href="~/css/style.css" rel="stylesheet" />
     <link href="~/css/style.min.css" rel="stylesheet" />
     <link href="~/css/login-register.min.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="~/images/favicon.png" sizes="32x32" />
 
 </head>
 <body class="vertical-layout vertical-menu 1-column blank-page blank-page" data-open="click" data-menu="vertical-menu" data-color="bg-gradient-x-purple-blue" data-col="1-column">
