--- a/AspNetCoreCS/Views/Shared/_Layout.cshtml
+++ b/AspNetCoreCS/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
     <link href="~/css/dashboard-analytics.min.css" rel="stylesheet" />
     <link href="~/css/style.css" rel="stylesheet" />
     <link href="~/css/style.min.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="~/images/favicon.png" sizes="32x32" />
 
 </head>
 <body class="vertical-layout vertical-menu 2-columns fixed-navbar" data-open="click" data-menu="vertical-menu" data-color="bg-gradient-x-purple-blue" data-col="2-columns">
