--- a/AspNetCoreCS/Views/Shared/_Subjects.cshtml
+++ b/AspNetCoreCS/Views/Shared/_Subjects.cshtml
@@ -7,7 +7,7 @@
         <div class="col-md-3">
             <div class="panel-body BooksDiv">
                 <p style="margin-top:0;">
-                <p><a asp-controller="home" asp-action="MyLibrary" asp-route-SubjectID="@Item.Id" class="btn-2 btn-library btn-2g btn"><img class="img-responsive" src="~/images/subjects/@Item.Image" /></a></p>
+                <p><a asp-controller="home" asp-action="MyLibrary" asp-route-SubjectID="@Item.Id"><img class="img-responsive" src="~/images/subjects/@Item.Image" /></a></p>
           
                 <h3 data-toggle="tooltip" data-original-title="@Item.Title">@Item.Title</h3>
                 <p data-toggle="tooltip" data-original-title="@Item.Title">@Item.Title</p>
