--- a/AspNetCoreCS/Views/Account/Login.cshtml
+++ b/AspNetCoreCS/Views/Account/Login.cshtml
@@ -20,6 +20,7 @@
     <link href="~/css/style.css" rel="stylesheet" />
     <link href="~/css/style.min.css" rel="stylesheet" />
     <link href="~/css/login-register.min.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="~/images/favicon.png" sizes="32x32" />
 </head>
 <!-- END: Head-->
 <!-- BEGIN: Body-->
