--- a/AspNetCoreCS/Views/Shared/Error.cshtml
+++ b/AspNetCoreCS/Views/Shared/Error.cshtml
@@ -3,10 +3,13 @@
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
 
-@if (Model.ShowRequestId)
+<h2 class="text-danger">
+    We are sorry, the resource you requested cannot be found.
+    The URL may be misspelled or the page you're looking for is no longer available.
+</h2>
+
+@*@if (Model.ShowRequestId)
 {
     <p>
         <strong>Request ID:</strong> <code>@Model.RequestId</code>
@@ -22,4 +25,4 @@
     It can result in displaying sensitive information from exceptions to end users.
     For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
     and restarting the app.
-</p>
+</p>*@
