--- a/AspNetCoreCS/Views/Shared/_Library.cshtml
+++ b/AspNetCoreCS/Views/Shared/_Library.cshtml
@@ -6,7 +6,7 @@
 
         <div class="col-md-3">
             <div class="panel-body BooksDiv">
-                <p style="margin-top:0;"><img class="img-responsive" src="~/images/books/@Item.Image" /></p>
+                <p style="margin-top:0;"><img class="img-responsive" src="~/images/coverpage.png" /></p>
                 <h3 data-toggle="tooltip" data-original-title="@Item.BookName">@Item.BookName</h3>
                 <p data-toggle="tooltip" data-original-title="@Item.Author">@Item.Author</p>
 
