--- a/AspNetCoreCS/Views/Account/Login.cshtml
+++ b/AspNetCoreCS/Views/Account/Login.cshtml
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <title>Readedge</title>
+    <title>Waterford Press</title>
     <link href="~/css/vendors.min.css" rel="stylesheet" />
     <link href="~/css/chartist.css" rel="stylesheet" />
     <link href="~/css/bootstrap.min.css" rel="stylesheet" />
@@ -67,13 +67,7 @@
                                                 <button type="submit" class="btn btn-default loginBtn col-md-12">Login</button>
                                                 <b style="color:white">@ViewBag.Message</b>
                                             </div>
-                                            <div class="form-group text-center">
-                                                <p><a asp-controller="Home" asp-action="Home" style="height:54px;color:white;float:left;">Guest User ?</a>
-                                                   <a asp-area="" asp-controller="UserSubscription" asp-action="index"  style="height:54px;color:white;float:right;">Subscription</a>
-                                                </p>
-                                             
-                                               
-                                            </div>
+                                           
 
                                             
                                         </form>
