--- a/AspNetCoreCS/Views/Home/Dashboard.cshtml
+++ b/AspNetCoreCS/Views/Home/Dashboard.cshtml
@@ -17,15 +17,13 @@
 </div>
 <div class="row">
 
-    <div class="col-lg-8 col-md-12" id="resultDiv">
+    <div class="col-lg-12 col-md-12" id="resultDiv">
 
 
-        <div class="card">
+        @*<div class="card">
             <div class="card-header">
                 <h3 class="card-title">Subjects</h3>
-                @*<a class="heading-elements-toggle">
-                    <i class="la la-ellipsis-v font-medium-3"></i>
-                </a>*@
+          
             </div>
             <div class="card-content">
                 <div class="card-body">
@@ -42,7 +40,7 @@
 
 
             </div>
-        </div>
+        </div>*@
 
         <div class="card">
             <div class="card-header">
@@ -63,13 +61,11 @@
         </div>
 
     </div>
-    <div class="col-xl-4 col-lg-12">
+    @*<div class="col-xl-4 col-lg-12">
         <div class="card">
             <div class="card-header">
                 <h3 class="card-title">Class</h3>
-                @*<a class="heading-elements-toggle">
-                        <i class="la la-ellipsis-v font-medium-3"></i>
-                    </a>*@
+                
             </div>
 
             <div class="card-content">
@@ -86,7 +82,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>*@
 </div>
 <script>
         $(document).ready(function () {
