--- a/AspNetCoreCS/Views/Shared/_EBookViewer.cshtml
+++ b/AspNetCoreCS/Views/Shared/_EBookViewer.cshtml
@@ -18,7 +18,7 @@
     <link href="~/css/viewer.css" rel="stylesheet" />
     <link href="~/css/style.min.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="~/images/favicon.png" sizes="32x32" />
-    <title>e-Book Viewer</title>
+    <title>Waterford Press</title>
 </head>
 
 <body id="fullscreen">
