--- a/AspNetCoreCS/Views/Home/BookDetail.cshtml
+++ b/AspNetCoreCS/Views/Home/BookDetail.cshtml
@@ -52,7 +52,7 @@
             
           
                 <div class="col-md-8">
-                    <h3>Animal_Tracks</h3>
+                    <h3>Animal Tracks</h3>
                     <hr />
                     @*<p><a asp-controller="home" asp-action="ViewContent" asp-route-BookId="@book.Id" asp-route-BookName="@book.Title" asp-route-type="0" class="btn btn-default btn-2 subjectBtn" disabled="@(!book.IsEbook)">Course Book</a></p>*@
          
