--- a/AspNetCoreCS/Views/Home/Dashboard.cshtml
+++ b/AspNetCoreCS/Views/Home/Dashboard.cshtml
@@ -44,7 +44,7 @@
 
         <div class="card">
             <div class="card-header">
-                <h3 class="card-title">My Library</h3>
+                <h3 class="card-title">Library</h3>
 </div>
             <div class="card-content">
                 <div class="card-body">
